--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
   id 'com.android.application'
 }
+apply plugin: 'kotlin-android'
 
 android {
   compileSdkVersion 30
@@ -14,6 +15,10 @@ android {
     versionName "1.0"
 
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+  }
+
+  buildFeatures {
+    viewBinding true
   }
 
   buildTypes {
@@ -36,4 +41,10 @@ dependencies {
   testImplementation 'junit:junit:4.+'
   androidTestImplementation 'androidx.test.ext:junit:1.1.2'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+  implementation "androidx.core:core-ktx:+"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+  maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+  mavenCentral()
 }
